--- a/services.html
+++ b/services.html
@@ -274,22 +274,22 @@
     <section id="details" class="details section">       
         <div class="details">
           <div class="container">
-              <div class="row">
-                <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
-                  <h4>Let's Streamline Your Claims Process Together!</h4>
-                  <p>Don't let claims reception hold you back. Contact us to learn more about our expert claims reception management services.</p>
-                  <a href="contact.html" class="btn btn-primary py-3 px-5">CLAIMS DETAILS</a>
-                </div>
-                <div class="col-md-6">
-                    <div class="position-relative h-100">
-                        <img class="position-absolute img-fluid h-100" src="img/cta/cta2.jpg">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="position-relative">
+                            <img class="position-absolute" src="img/cta/cta3.jpg">
+                        </div>
+                    </div>
+                    <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
+                        <h4>Let's Streamline Your Claims Process Together!</h4>
+                        <p>Don't let claims reception hold you back. Contact us to learn more about our expert claims reception management services.</p>
+                        <a href="contact.html" class="btn btn-primary py-3 px-5">CLAIMS DETAILS</a>
                     </div>
                 </div>
-              </div>
           </div>
-         </div>
+        </div>
     
-      </section><!-- /Features Section -->
+    </section><!-- /Features Section -->
 
     <div class="container-xxl project py-5">
         <div class="container">
