--- a/nosotros.html
+++ b/nosotros.html
@@ -106,8 +106,8 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <div class="about-img">
-                        <img class="img-fluid" src="img/about-1.jpg" alt="">
-                        <img class="img-fluid" src="img/about-2.jpg" alt="">
+                        <img class="img-fluid" src="img/about/about.jpg" alt="">
+                        <img class="img-fluid" src="img/about/about2.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
@@ -123,7 +123,7 @@
     </div>
     <!-- About End -->
     <section id="call-to-action" class="call-to-action section dark-background">
-        <img src="img/cta/cta-bg1.jpg" alt="">
+        <img src="img/cta/cta-bg2.jpg" alt="">
       
         <div class="container">
           <div class="row justify-content-center" data-aos="zoom-in" data-aos-delay="100">
@@ -180,13 +180,13 @@
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="why-img">
-                        <img class="img-fluid" src="img/about-2.jpg" alt="">
+                        <img class="img-fluid" src="img/why/why-1.jpg" alt="">
                     </div>
                 </div>
                 <div class="row g-5"> 
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="why-img">
-                            <img class="img-fluid" src="img/about-2.jpg" alt="">
+                            <img class="img-fluid" src="img/why/why-2.jpg" alt="">
                         </div>
                     </div>  
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">   
