--- a/servicios.html
+++ b/servicios.html
@@ -268,15 +268,15 @@
         <div class="details">
           <div class="container">
               <div class="row">
-                <div class="col-md-9" data-aos="fade-up" data-aos-delay="300">
+                <div class="col-md-6">
+                    <div class="position-relative">
+                        <img class="position-absolute" src="img/cta/cta3.jpg">
+                    </div>
+                </div>
+                <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
                   <h4>¡Agilicemos Juntos Su Proceso De Reclamaciones!</h4>
                   <p>No deje que la recepción de reclamaciones le frene. Contáctenos para obtener más información sobre nuestros servicios expertos en gestión de recepción de reclamaciones.</p>
                   <a href="contacto.html" class="btn btn-primary py-3 px-5">RECLAMACIONES</a>
-                </div>
-                <div class="col-md-6">
-                    <div class="position-relative h-100">
-                        <img class="position-absolute img-fluid h-100" src="img/cta/cta2.jpg">
-                    </div>
                 </div>
               </div>
           </div>
