--- a/about.html
+++ b/about.html
@@ -217,7 +217,7 @@
                                     <img class="flex-shrink-0" src="img/icons/support.png" alt="Icon">
                                     <div class="ms-4">
                                         <h3>IT Support</h3>
-                                        <p class="mb-0">With expert knowledge and a results-driven approach, we deliver tailored services in property tax, permits, royalty, and advertising—ensuring compliance and maximizing value for your business.</p>  
+                                        <p class="mb-0">Our certified experts deliver cost-effective, 24/7 IT support tailored to your business—maximizing performance, minimizing downtime, and aligning technology with your goals.</p>  
                                     </div>
                                 </div>
                             </div>
