--- a/contacto.html
+++ b/contacto.html
@@ -142,34 +142,43 @@
                 </div>
                 <div class="col-lg-9 mx-auto" data-wow-delay="0.5s">
                     <p class="mb-4">No dude en contactarnos si necesita más información. Envíenos un mensaje y le responderemos a la brevedad.</p>
-                    <form>
+                    <form id="contactForm" class="contactForm" role="form" action="contact.php" method="post">
+                        <input hidden name="type" type="hidden" id="type" class="form-control" value='1' data-msg="Please enter at least 4 chars" />
                         <div class="row g-3">
                             <div class="col-md-6">
                                 <div class="form-floating">
-                                    <input type="text" class="form-control" id="name" placeholder="Your Name">
+                                    <input type="text" class="form-control" id="name" name="name" placeholder="Nombre" data-rule="minlen:2" data-msg="Escriba su nombre." data-rule="required"/>
                                     <label for="name">Nombre</label>
+                                    <div class="validation" style='color: #000000;text-align: left;font-size: 13px;'></div>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-floating">
-                                    <input type="email" class="form-control" id="email" placeholder="Your Email">
+                                    <input type="email" class="form-control" id="email" name="email" placeholder="Correo Electrónico" data-rule="email" data-rule="minlen:4" data-msg="Escriba un correo electrónico válido." data-rule="required"/>
                                     <label for="email">Correo Electrónico</label>
+                                    <div class="validation" style='color: #000000;text-align: left;font-size: 13px;'></div>
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-floating">
-                                    <input type="text" class="form-control" id="subject" placeholder="Subject">
+                                    <input type="text" class="form-control" id="issue" placeholder="Asunto" name="issue" data-msg="Por favor, escriba algo para nosotros." data-rule="required"/>
                                     <label for="subject">Asunto</label>
+                                    <div class="validation" style='color: #000000;text-align: left;font-size: 13px;'></div>
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-floating">
                                     <textarea class="form-control" placeholder="Leave a message here" id="message" style="height: 100px"></textarea>
                                     <label for="message">Mensaje</label>
+                                    <div class="validation" style='color: #000000;text-align: left;font-size: 13px;'></div>
                                 </div>
                             </div>
+                            <!-- form message -->
+                            <!-- <p><span id="sendmessage"></span></p>
+                            <div class="errormessage text-center" id="errormessage"></div>-->
+                            <!-- Send message -->
                             <div class="col-12">
-                                <button class="btn btn-primary w-100 py-3" type="submit">Enviar Mensaje</button>
+                                <button onclick="showHint()" type="submit" class="btn btn-primary w-100 py-3">Enviar Mensaje</button>
                             </div>
                         </div>
                     </form>
@@ -267,6 +276,9 @@
     <script src="lib/tempusdominus/js/moment.min.js"></script>
     <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
     <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+    <script src="js/contactform/contactform.js"></script>
+    <script src="js/contactform/newsletter_form.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
