--- a/nosotros.html
+++ b/nosotros.html
@@ -214,7 +214,7 @@
                                     <img class="flex-shrink-0" src="img/icons/support.png" alt="Icon">
                                     <div class="ms-4">
                                         <h3>Soporte TI</h3>
-                                        <p class="mb-0">Con conocimiento experto y un enfoque orientado a resultados, brindamos servicios personalizados en impuestos a la propiedad, permisos, regalías y publicidad, garantizando el cumplimiento y maximizando el valor para su negocio.</p>  
+                                        <p class="mb-0">Nuestros expertos certificados ofrecen soporte de TI rentable y 24/7, adaptado a su negocio: maximizan el rendimiento, minimizan el tiempo de inactividad y alinean la tecnología con sus objetivos.</p>  
                                     </div>
                                 </div>
                             </div>
