--- a/services.html
+++ b/services.html
@@ -148,10 +148,11 @@
     <!-- Service Start -->
     <div class="container-xxl py-5">
         <div class="container">
-            <div class="col-lg-12 wow fadeInUp" data-wow-delay="0.1s"></div>
+            <div class="col-lg-12 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s">
                     <h4 class="section-title">Our Services</h4>
-                    <h1 class="display-5 mb-4">Power Your Business Forward with Expert Services.</h1>
+                    <h1 class="display-5">Power Your Business Forward with Expert Services.</h1>
+                    <h2>From Payroll to IT, Accounting to Dispatch, We Simplify, Streamline, and Transform Your Operations.</h2>
                 </div>
             </div>    
             <div class="row g-4">
