--- a/contacto.html
+++ b/contacto.html
@@ -106,7 +106,7 @@
         <div class="container align-items-center">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s">
                 <h4 class="section-title">Contacta con Nosotros</h4>
-                <h1 class="display-5 mb-4">Para Cualquier Consulta, No Dude En Contactarnos.s</h1>
+                <h1 class="display-5 mb-4">Para Cualquier Consulta, No Dude En Contactarnos.</h1>
             </div>
             <div class="row g-5">
               <!--  <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -199,7 +199,7 @@
 
 
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-body footer mt-5 pt-5 px-0 wow fadeIn" data-wow-delay="0.1s">
+    <div class="footer container-fluid bg-dark text-body mt-5 pt-5 px-0 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
@@ -218,12 +218,14 @@
                     </div>-->
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <h3 class="text-light mb-4">Every Day Counts</h3>
-                    <a class="btn btn-link" href="nosotros.html">Nosotros</a>
-                    <a class="btn btn-link" href="servicios.html">Servicios</a>
-                    <a class="btn btn-link" href="contacto.html">Contacto</a>
-                    <a class="btn btn-link" href="privacidad.html">Política de Privacidad</a>
-                    <a class="btn btn-link" href="terminos.html">Términos y Condiciones</a>
+                    <div class="footer-links">
+                        <h3 class="text-light mb-4">Every Day Counts</h3>
+                        <a class="btn btn-link" href="nosotros.html">Nosotros</a>
+                        <a class="btn btn-link" href="servicios.html">Servicios</a>
+                        <a class="btn btn-link" href="contacto.html">Contacto</a>
+                        <a class="btn btn-link" href="privacidad.html">Política de Privacidad</a>
+                        <a class="btn btn-link" href="terminos.html">Términos y Condiciones</a>
+                    </div>
                 </div>
               <!--  <div class="col-lg-3 col-md-6">
                     <h3 class="text-light mb-4">Quick Links</h3>
@@ -258,8 +260,6 @@
         </div>
     </div>
     <!-- Footer End -->
-
-
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
