--- a/index.html
+++ b/index.html
@@ -53,25 +53,22 @@
             <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
                 <img class="me-3" src="img/logo/edc blanco - 120x.png">
             </a>
-            <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-          <nav id="navmenu" class="navmenu">
-            <ul>
-              <a href="index.html" class="nav-item nav-link active">Home</a>
-              <a href="about.html" class="nav-item nav-link">About</a>
-              <a href="services.html" class="nav-item nav-link">Services</a>
-              <div class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><span class="fa fa-light fa-globe toggle-dropdown"></span></a>
-                <div class="dropdown-menu fade-up m-0">
-                   <a href="index.html" class="dropdown-item active">English</a>
-                   <a href="inicio.html" class="dropdown-item">Spanish</a>
+            <nav id="navmenu" class="navmenu">
+                <ul>
+                <a href="index.html" class="nav-item nav-link active">Home</a>
+                <a href="about.html" class="nav-item nav-link">Nosotros</a>
+                <a href="services.html" class="nav-item nav-link">Services</a>
+                <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><span class="fa fa-light fa-globe toggle-dropdown"></span></a>
+                    <div class="dropdown-menu fade-up m-0">
+                    <a href="index.html" class="dropdown-item active">English</a>
+                    <a href="inicio.html" class="dropdown-item">Spanish</a>
+                    </div>
                 </div>
-              </div>
-              <a href="contact.html" class="btn btn-primary py-2 px-4 d-none d-lg-block">Contact</a>
-            </ul>
-            <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-          </nav>
+                <a href="contact.html" class="btn btn-primary py-2 px-4 d-none d-lg-block">Contact</a>
+                </ul>
+                <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+            </nav>
         </div>
     </header>
     
@@ -658,40 +655,24 @@
 
 
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-body footer mt-5 pt-5 px-0 wow fadeIn" data-wow-delay="0.1s">
+    <div class="footer container-fluid bg-dark text-body mt-5 pt-5 px-0 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <div class="footer-logo">
                         <a href="index.html"><img src="img/logo/edc blanco - footer.png"></a> 
                     </div>
-                   <!-- <h3 class="text-light mb-4">Address</h3>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+012 345 67890</p>
-                    <p>Driving Business Success with Advanced IT and Financial Solutions.</p>-->
-                   <!--  <div class="d-flex pt-2">
-                        <a class="btn btn-square btn-outline-body me-1" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-square btn-outline-body me-1" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square btn-outline-body me-1" href=""><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-square btn-outline-body me-0" href=""><i class="fab fa-linkedin-in"></i></a>
-                    </div>-->
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <h3 class="text-light mb-4">Every Day Counts</h3>
-                    <a class="btn btn-link" href="about.html">About Us</a>
-                    <a class="btn btn-link" href="services.html">Our Services</a>
-                    <a class="btn btn-link" href="contact.html">Contact Us</a>
-                    <a class="btn btn-link" href="privacy.html">Privacy Policy</a>
-                    <a class="btn btn-link" href="terms.html">Terms and Conditions</a>
+                    <div class="footer-links">
+                        <h3 class="text-light mb-4">Every Day Counts</h3>
+                        <a class="btn btn-link" href="about.html">About Us</a>
+                        <a class="btn btn-link" href="services.html">Our Services</a>
+                        <a class="btn btn-link" href="contact.html">Contact Us</a>
+                        <a class="btn btn-link" href="privacy.html">Privacy Policy</a>
+                        <a class="btn btn-link" href="terms.html">Terms and Conditions</a>
+                    </div>
                 </div>
-              <!--  <div class="col-lg-3 col-md-6">
-                    <h3 class="text-light mb-4">Quick Links</h3>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
-                    <a class="btn btn-link" href="">Terms and Conditions & Condition</a>
-                    <a class="btn btn-link" href="">Support</a>
-                </div>-->
                 <div class="col-lg-3 col-md-6">
                     <h3 class="text-light mb-4">Newsletter</h3>
                     <p>Subscribe to our newsletter to get more information.</p>
