--- a/terms.html
+++ b/terms.html
@@ -186,47 +186,39 @@
         
 
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-body footer mt-5 pt-5 px-0 wow fadeIn" data-wow-delay="0.1s">
+    <div class="footer container-fluid bg-dark text-body mt-5 pt-5 px-0 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <div class="footer-logo">
                         <a href="index.html"><img src="img/logo/edc blanco - footer.png"></a> 
                     </div>
-                   <!-- <h3 class="text-light mb-4">Address</h3>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+012 345 67890</p>
-                    <p>Driving Business Success with Advanced IT and Financial Solutions.</p>-->
-                   <!--  <div class="d-flex pt-2">
-                        <a class="btn btn-square btn-outline-body me-1" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-square btn-outline-body me-1" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square btn-outline-body me-1" href=""><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-square btn-outline-body me-0" href=""><i class="fab fa-linkedin-in"></i></a>
-                    </div>-->
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <h3 class="text-light mb-4">Every Day Counts</h3>
-                    <a class="btn btn-link" href="about.html">About Us</a>
-                    <a class="btn btn-link" href="services.html">Our Services</a>
-                    <a class="btn btn-link" href="contact.html">Contact Us</a>
-                    <a class="btn btn-link" href="privacy.html">Privacy Policy</a>
-                    <a class="btn btn-link" href="terms.html">Terms and Conditions</a>
+                    <div class="footer-links">
+                        <h3 class="text-light mb-4">Every Day Counts</h3>
+                        <a class="btn btn-link" href="about.html">About Us</a>
+                        <a class="btn btn-link" href="services.html">Our Services</a>
+                        <a class="btn btn-link" href="contact.html">Contact Us</a>
+                        <a class="btn btn-link" href="privacy.html">Privacy Policy</a>
+                        <a class="btn btn-link" href="terms.html">Terms and Conditions</a>
+                    </div>
                 </div>
-              <!--  <div class="col-lg-3 col-md-6">
-                    <h3 class="text-light mb-4">Quick Links</h3>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
-                    <a class="btn btn-link" href="">Terms and Conditions & Condition</a>
-                    <a class="btn btn-link" href="">Support</a>
-                </div>-->
                 <div class="col-lg-3 col-md-6">
                     <h3 class="text-light mb-4">Newsletter</h3>
                     <p>Subscribe to our newsletter to get more information.</p>
-                    <div class="position-relative mx-auto" style="max-width: 400px;">
-                        <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SIGN UP</button>
-                    </div>
+                    <form id="newsletter_form" class="newsletter_form" role="form" action="newsletter_form.php" method="post">
+                        <input hidden name="type" type="hidden" id="type" class="form-control" value='1' data-msg="Please enter at least 4 chars" />
+                        <div class="position-relative mx-auto" style="max-width: 400px;">
+                            <input class="form-control bg-transparent w-100 py-3 ps-3 pe-5" type="email" placeholder="Your email" id="email" name="email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your mail'" placeholder="Enter your mail" data-rule="email" data-msg="Please enter a valid email." data-rule="required">
+                            <div class="validation"></div>
+                            <!-- form message -->
+                            <p><span id="sendmessage"></span></p>
+                            <div class="newslettermessage" id="newslettermessage"></div>
+                            <!-- Send message -->
+                            <button onclick="showHint()" type="submit" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SIGN UP</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
@@ -245,10 +237,6 @@
         </div>
     </div>
     <!-- Footer End -->
-
-
-
-
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
