--- a/inicio.html
+++ b/inicio.html
@@ -53,9 +53,6 @@
             <a href="inicio.html" class="navbar-brand ms-4 ms-lg-0">
                 <img class="me-3" src="img/logo/edc blanco - 120x.png">
             </a>
-            <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
             <nav id="navmenu" class="navmenu">
                 <ul>
                 <a href="inicio.html" class="nav-item nav-link active">Inicio</a>
@@ -661,7 +658,7 @@
 
 
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-body footer mt-5 pt-5 px-0 wow fadeIn" data-wow-delay="0.1s">
+    <div class="footer container-fluid bg-dark text-body mt-5 pt-5 px-0 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
@@ -680,12 +677,14 @@
                     </div>-->
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <h3 class="text-light mb-4">Every Day Counts</h3>
-                    <a class="btn btn-link" href="nosotros.html">Nosotros</a>
-                    <a class="btn btn-link" href="servicios.html">Servicios</a>
-                    <a class="btn btn-link" href="contacto.html">Contacto</a>
-                    <a class="btn btn-link" href="privacidad.html">Política de Privacidad</a>
-                    <a class="btn btn-link" href="terminos.html">Términos y Condiciones</a>
+                    <div class="footer-links">
+                        <h3 class="text-light mb-4">Every Day Counts</h3>
+                        <a class="btn btn-link" href="nosotros.html">Nosotros</a>
+                        <a class="btn btn-link" href="servicios.html">Servicios</a>
+                        <a class="btn btn-link" href="contacto.html">Contacto</a>
+                        <a class="btn btn-link" href="privacidad.html">Política de Privacidad</a>
+                        <a class="btn btn-link" href="terminos.html">Términos y Condiciones</a>
+                    </div>
                 </div>
               <!--  <div class="col-lg-3 col-md-6">
                     <h3 class="text-light mb-4">Quick Links</h3>
@@ -720,8 +719,6 @@
         </div>
     </div>
     <!-- Footer End -->
-
-
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
