--- a/terminos.html
+++ b/terminos.html
@@ -180,7 +180,7 @@
         
 
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-body footer mt-5 pt-5 px-0 wow fadeIn" data-wow-delay="0.1s">
+    <div class="footer container-fluid bg-dark text-body mt-5 pt-5 px-0 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
@@ -199,12 +199,14 @@
                     </div>-->
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <h3 class="text-light mb-4">Every Day Counts</h3>
-                    <a class="btn btn-link" href="nosotros.html">Nosotros</a>
-                    <a class="btn btn-link" href="servicios.html">Servicios</a>
-                    <a class="btn btn-link" href="contacto.html">Contacto</a>
-                    <a class="btn btn-link" href="privacidad.html">Política de Privacidad</a>
-                    <a class="btn btn-link" href="terminos.html">Términos y Condiciones</a>
+                    <div class="footer-links">
+                        <h3 class="text-light mb-4">Every Day Counts</h3>
+                        <a class="btn btn-link" href="nosotros.html">Nosotros</a>
+                        <a class="btn btn-link" href="servicios.html">Servicios</a>
+                        <a class="btn btn-link" href="contacto.html">Contacto</a>
+                        <a class="btn btn-link" href="privacidad.html">Política de Privacidad</a>
+                        <a class="btn btn-link" href="terminos.html">Términos y Condiciones</a>
+                    </div>
                 </div>
               <!--  <div class="col-lg-3 col-md-6">
                     <h3 class="text-light mb-4">Quick Links</h3>
@@ -239,9 +241,6 @@
         </div>
     </div>
     <!-- Footer End -->
-
-
-
 
 
     <!-- Back to Top -->
