--- a/inicio.html
+++ b/inicio.html
@@ -65,7 +65,7 @@
                     <a href="inicio.html" class="dropdown-item active">Español</a>
                     </div>
                 </div>
-                <a href="contacto.html" class="btn btn-primary py-2 px-4 d-none d-lg-block">Contacto</a>
+                <a href="contacto.html" class="btn btn-primary py-2 px-4">Contacto</a>
                 </ul>
                 <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
             </nav>
@@ -179,8 +179,8 @@
                         <a href="servicios.html" class="btn btn-primary py-3 px-5">NÓMINA</a>
                     </div>
                     <div class="col-md-6">
-                        <div class="position-relative h-100">
-                            <img class="position-absolute img-fluid h-100" src="img/cta/cta2.jpg">
+                        <div class="details position-relative">
+                            <img src="img/cta/cta2.jpg">
                         </div>
                     </div>
                 </div>    
