--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
                     </div>
                 </div>    
             </div>
-            <a href="contact.html" class="btn btn-primary py-2 px-4 d-none d-lg-block">CONTACT</a>
+            <a href="contact.html" class="btn btn-primary py-2 px-4">CONTACT</a>
         </div>
     </nav>
     <!-- Navbar End -->
