--- a/contact.html
+++ b/contact.html
@@ -76,18 +76,18 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="services.html" class="nav-item nav-link">Services</a>
-                <div class="nav-item dropdown">
+                <li><a href="index.html" class="nav-item nav-link">Home</a></li>
+                <li><a href="about.html" class="nav-item nav-link">About</a></li>
+                <li><a href="services.html" class="nav-item nav-link">Services</a></li>
+                <li class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><span class="fa fa-light fa-globe"></span></a>
-                    <div class="dropdown-menu fade-up m-0">
-                        <a href="contact.html" class="dropdown-item active">English</a>
-                        <a href="contacto.html" class="dropdown-item">Spanish</a>
-                    </div>
-                </div>    
-            </div>
-            <a href="contact.html" class="btn btn-primary py-2 px-4 d-none d-lg-block">CONTACT</a>
+                    <ul class="dropdown-menu fade-up m-0">
+                        <li><a href="contact.html" class="dropdown-item active">English</a></li>
+                        <li><a href="contacto.html" class="dropdown-item">Spanish</a></li>
+                    </ul>
+                </li>      
+            </div>                      
+            </li><a href="contact.html" class="btn btn-primary py-2 px-4">CONTACT</a></li> 
         </div>
     </nav>
     <!-- Navbar End -->
