--- a/servicios.html
+++ b/servicios.html
@@ -79,7 +79,7 @@
                     </div>
                 </div>    
             </div>
-            <a href="contacto.html" class="btn btn-primary py-2 px-4 d-none d-lg-block">CONTACTO</a>
+            <a href="contacto.html" class="btn btn-primary py-2 px-4">CONTACTO</a>
         </div>
     </nav>
     <!-- Navbar End -->
