--- a/contact.html
+++ b/contact.html
@@ -81,13 +81,13 @@
                 <li><a href="services.html" class="nav-item nav-link">Services</a></li>
                 <li class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><span class="fa fa-light fa-globe"></span></a>
-                    <ul class="dropdown-menu fade-up m-0">
-                        <li><a href="contact.html" class="dropdown-item active">English</a></li>
-                        <li><a href="contacto.html" class="dropdown-item">Spanish</a></li>
-                    </ul>
+                    <div class="dropdown-menu fade-up m-0">
+                        <a href="index.html" class="dropdown-item active">English</a>
+                        <a href="inicio.html" class="dropdown-item">Spanish</a>
+                    </div>
                 </li>      
             </div>                      
-            </li><a href="contact.html" class="btn btn-primary py-2 px-4">CONTACT</a></li> 
+            <a href="contact.html" class="btn btn-primary py-2 px-4">CONTACT</a> 
         </div>
     </nav>
     <!-- Navbar End -->
